--- a/fly.toml
+++ b/fly.toml
@@ -9,12 +9,20 @@ primary_region = 'ams'
 [build]
 
 [http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8080
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
+
+[[http_service.ports]]
+handlers = ["http"]
+port = 80
+
+[[http_service.ports]]
+handlers = ["tls", "http"]
+port = 443
 
 [[vm]]
   memory = '1gb'
